# nonebot-plugin-arkgacha

./: .gitignore  LICENSE  README.md  exam.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
nonebot_plugin_arkgacha/: __init__.py  __main__.py  config.py
